# ShippyAPI

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  existing_ships.py  game_errors.py  index.py  main.py  pyproject.toml  requirements.txt  ship.py
api/: config.py  utils.py
api/db/: connection.py  models.py  utils.py
api/db/queries/: list_entities.py
api/modifier/: models.py  repository.py  router.py
api/ship/: models.py  repository.py  router.py
engine/: calculate_moves.py  existing_ships.py  index.py  main.py  set_ship_position.py  ship.py  util_classes.py
engine/modifiers/: by_ship.py  by_ship_nation.py  by_ship_type.py  modifiers.py  serialized_modifiers.py  utils.py
jsons/: modifiers.json  newships.json  ships.json
ship/: __init__.py  calculate_moves.py  get_random_positions.py  set_ship_position.py  ship.py  util_classes.py  utils.py
ship/modifiers/: ModifiersPriority.py  __init__.py  by_ship.py  by_ship_nation.py  by_ship_type.py  modifiers.py  register_modifier.py  serialized_modifiers.py  utils.py
templates/create/: index.html  index.js  style.css
